[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/hierarchical_finite_state_machine/editor/icon/play_icon.png" type="Texture" id=1]
[ext_resource path="res://addons/hierarchical_finite_state_machine/editor/transit_flow/transit_flow.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
shadow_color = Color( 1, 1, 1, 1 )
shadow_size = 2

[node name="TransitFlow" type="GraphNode"]
visible = false
modulate = Color( 0.75, 0.75, 0.75, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.0
margin_top = -2.0
margin_right = 107.0
margin_bottom = 3.0
rect_min_size = Vector2( 1, 2 )
rect_pivot_offset = Vector2( 0, 2 )
mouse_filter = 2
custom_styles/commentfocus = SubResource( 1 )
custom_styles/comment = SubResource( 1 )
custom_styles/frame = SubResource( 1 )
custom_styles/selectedframe = SubResource( 1 )
custom_styles/position = SubResource( 1 )
custom_styles/defaultfocus = SubResource( 1 )
custom_styles/breakpoint = SubResource( 1 )
custom_styles/defaultframe = SubResource( 1 )
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 405.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 1.0
margin_right = 405.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 4 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CenterContainer"]
margin_left = 202.0
margin_top = 2.0
margin_right = 202.0
margin_bottom = 2.0
mouse_filter = 1

[node name="Arrow" type="TextureRect" parent="CenterContainer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 10, 10 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConditionComment" type="VBoxContainer" parent="CenterContainer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -26.0
margin_right = 12.0
margin_bottom = -12.0
rect_pivot_offset = Vector2( 12, 7 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/Control/ConditionComment"]
margin_right = 24.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 496, 7 )
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_TransitFlow_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_TransitFlow_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TransitFlow_mouse_exited"]
[connection signal="ready" from="CenterContainer/Control/ConditionComment" to="." method="_on_ConditionComment_ready"]
